--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Production-Ready-Instruction-Finetuning-of-Meta-Llama-3.2-3B-Instruct-Project"]
 	path = Production-Ready-Instruction-Finetuning-of-Meta-Llama-3.2-3B-Instruct-Project
 	url = https://github.com/shaheennabi/Production-Ready-Instruction-Finetuning-of-Meta-Llama-3.2-3B-Instruct-Project
+[submodule "Production-Ready-End-to-End-Hate-Speech-Classification-Project"]
+	path = Production-Ready-End-to-End-Hate-Speech-Classification-Project
+	url = https://github.com/shaheennabi/Production-Ready-End-to-End-Hate-Speech-Classification-Project
